--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ input[type='range'] {
   -webkit-appearance: none;
   width: 100%;
   height: 7px;
-  background: rgba(255, 255, 255, 0.6);
+  background: #cccccc;
   border-radius: 5px;
   background-image: linear-gradient(#332fd8, #332fd8);
   background-size: 70% 100%;
